<!--
    Copyright 2016 Pierre-Yves Lapersonne (aka. "pylapp",  pylapp(dot)pylapp(at)gmail(dot)com)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<!-- ✿✿✿✿ ʕ •ᴥ•ʔ/ ︻デ═一 -->

________________________________________________


Date.......... 02/03/2016 21h30
What.......... Initialized the project
                - light GUI
                - Apache v2 licence
                - Click with SU shell commands
                - Configuration of the clicking process
                - About field
                - Logo
________________________________________________


Date.......... 03/03/2016 23h55
What.......... Clean up


________________________________________________


Date..........  15/03/2016
What..........  Credits
                 - Added credits / licences in the GUI

________________________________________________


Date..........   /  /
What..........


________________________________________________


Date..........   /  /
What..........


________________________________________________


Date..........   /  /
What..........


________________________________________________


Date..........   /  /
What..........


________________________________________________


Date..........   /  /
What..........


________________________________________________