@@ -25,8 +25,8 @@ android {
         applicationId "com.pylapp.smoothclicker"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.1.0"
+        versionCode 3
+        versionName "1.2.0"
     }
     buildTypes {
         release {
